--- a/src/sass/layout/_invoice.scss
+++ b/src/sass/layout/_invoice.scss
@@ -1,6 +1,6 @@
 .invoice {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr;
 
   margin: 0 auto;
   margin-top: 2rem;
@@ -108,13 +108,14 @@
 }
 .signature {
   display: grid;
+  grid-gap: 3rem;
   grid-template-columns: repeat(2, 1fr);
   margin: 2rem auto;
   width: 60%;
   font-size: 2rem;
   .signature1,
   .signature2 {
-    height: 5rem;
+    height: 8rem;
     width: 100%;
     border: 1px solid black;
   }
