--- a/src/sass/layout/_invoices.scss
+++ b/src/sass/layout/_invoices.scss
@@ -36,28 +36,51 @@
           grid-column: 1/2;
           grid-row: 1/2;
         }
+        &-5 {
+          grid-column: 3/4;
+        }
 
         &-6 {
           display: flex;
           justify-content: center;
           align-items: center;
 
-          grid-column: 2/3;
+          grid-column: 3/4;
           grid-row: 3/5;
         }
       }
     }
     .btn-invoices-action {
-      display: flex;
-      justify-content: space-between;
-      margin: 1rem auto;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
       a {
+        text-decoration: none;
+        color: black;
+        font-size: 2rem;
+        margin: 1rem auto;
+        justify-self: center;
+        align-self: center;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+          font-size: 2.2rem;
+        }
+      }
+      button {
         text-decoration: none;
         color: black;
         font-size: 2rem;
         margin: 1rem auto;
         display: flex;
         justify-content: center;
+      }
+      .btn-delete {
+        background-color: red;
+        color: white;
+        border: none;
+        padding: 1rem;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
       }
     }
   }
